# mygit

./: README.txt
Calculator/: CMakeLists.txt  MainWindow.cpp  buildwin.bat
TEST-1/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
